added surface feature fields for polygons

--- a/www/app/spot/spot-tab.html
+++ b/www/app/spot/spot-tab.html
@@ -103,6 +103,15 @@
         </ion-input>
       </div>
 
+      <div ng-show='vm.showSurfaceFeature'>
+        <div class='item item-divider'>
+          Surface Feature
+        </div>
+        <div>
+          <auto-fields/>
+        </div>
+      </div>
+
       <div ng-show='vm.showRockUnit'>
         <div class='item item-divider'>
           Rock Unit
