--- a/www/app/project/tags.html
+++ b/www/app/project/tags.html
@@ -23,9 +23,13 @@
                 ng-click='vm.goToTag(tag.id)'>
         <b>{{tag.name}}</b>
         <span ng-if='tag.categorization'>{{ vm.getTagTypeLabel(tag.categorization) }}</span>
-        <small>({{ tag.spots.length || 0 }}
-          <span ng-if='tag.spots.length > 1 || !tag.spots.length'>Spots)</span>
-          <span ng-if='tag.spots.length === 1'>Spot)</span>
+        <small>
+          ({{ tag.spots.length || 0 }}
+          <span ng-if='tag.spots.length > 1 || !tag.spots.length'>Spots, </span>
+          <span ng-if='tag.spots.length === 1'>Spot, </span>
+          {{ vm.getNumTaggedFeatures(tag) }}
+          <span ng-if='vm.getNumTaggedFeatures(tag) === 0 || vm.getNumTaggedFeatures(tag) > 1'>Features)</span>
+          <span ng-if='vm.getNumTaggedFeatures(tag) === 1'>Feature)</span>
         </small>
         <button class='button button-clear button-assertive'
                 ng-click='vm.deleteTag(tag)'>
