--- a/www/app/spot/add-tag-modal.html
+++ b/www/app/spot/add-tag-modal.html
@@ -1,26 +1,30 @@
 <ion-modal-view>
   <ion-header-bar class='bar-dark nav-title-slide-ios7' align-title='center'>
-    <button class='button button-clear' ng-click='vmChild.closeModal("addTagModal")'>
+    <button class='button button-clear' ng-click='vm.closeModal("addTagModal")'>
       <span class='icon ion-arrow-left-c'></span>
     </button>
-    <h1 class='title'>Add Tags to Spot</h1>
-    <button class='button button-icon' ng-click='vmChild.createTag()'>
+    <h1 class='title'>{{ vm.addTagModalTitle }}</h1>
+    <button class='button button-icon' ng-click='vm.createTag()'>
       <span class='icon ion-plus'></span>
     </button>
   </ion-header-bar>
   <ion-content class='has-header'>
-    <div class='padding' ng-show='vmChild.allTags.length === 0'>
+    <div class='padding' ng-show='vm.allTags.length === 0'>
       No Tags created yet. Create a new tag by using the '+' button in the top right.
     </div>
     <ion-checkbox class='item-text-wrap item-button-right'
-                  ng-repeat='tag in vmChild.allTags | orderBy:"name" track by tag.id'
-                  ng-checked='vmChild.isOptionChecked(tag)'
-                  ng-click='vmChild.toggleChecked(tag)'>
+                  ng-repeat='tag in vm.allTags | orderBy:"name" track by tag.id'
+                  ng-checked='vm.isTagChecked(tag)'
+                  ng-click='vm.toggleTagChecked(tag)'>
       <b>{{ tag.name }}</b>
       <span ng-if='tag.categorization'>{{ tag.categorization }}</span>
-      <small>({{ tag.spots.length || 0 }}
-        <span ng-if='tag.spots.length > 1 || !tag.spots.length'>Spots)</span>
-        <span ng-if='tag.spots.length === 1'>Spot)</span>
+      <small>
+        ({{ tag.spots.length || 0 }}
+        <span ng-if='tag.spots.length > 1 || !tag.spots.length'>Spots, </span>
+        <span ng-if='tag.spots.length === 1'>Spot, </span>
+        {{ vm.getNumTaggedFeatures(tag) }}
+        <span ng-if='vm.getNumTaggedFeatures(tag) === 0 || vm.getNumTaggedFeatures(tag) > 1'>Features)</span>
+        <span ng-if='vm.getNumTaggedFeatures(tag) === 1'>Feature)</span>
       </small>
     </ion-checkbox>
   </ion-content>
