--- a/www/app/spot/set-active-tags-modal.html
+++ b/www/app/spot/set-active-tags-modal.html
@@ -9,17 +9,21 @@
     </button>
   </ion-header-bar>
   <ion-content class='has-header'>
-    <div class='padding' ng-show='vmChild.allTags.length === 0'>
+    <div class='padding' ng-show='vm.allTags.length === 0'>
       No Tags created yet. Create a new tag by using the '+' button in the top right.
     </div>
     <ion-checkbox class='item-text-wrap item-button-right'
-               ng-repeat='tag in vmChild.allTags | orderBy:"name" track by tag.id'
+               ng-repeat='tag in vm.allTags | orderBy:"name" track by tag.id'
                ng-click='vmChild.toggleActiveTagChecked(tag)'>
       <b>{{ tag.name }}</b>
       <span ng-if='tag.categorization'>{{ tag.categorization }}</span>
-      <small>({{ tag.spots.length || 0 }}
-        <span ng-if='tag.spots.length > 1 || !tag.spots.length'>Spots)</span>
-        <span ng-if='tag.spots.length === 1'>Spot)</span>
+      <small>
+        ({{ tag.spots.length || 0 }}
+        <span ng-if='tag.spots.length > 1 || !tag.spots.length'>Spots, </span>
+        <span ng-if='tag.spots.length === 1'>Spot, </span>
+        {{ vm.getNumTaggedFeatures(tag) }}
+        <span ng-if='vm.getNumTaggedFeatures(tag) === 0 || vm.getNumTaggedFeatures(tag) > 1'>Features)</span>
+        <span ng-if='vm.getNumTaggedFeatures(tag) === 1'>Feature)</span>
       </small>
     </ion-checkbox>
   </ion-content>
