--- a/www/app/spot/3dstructures-tab.html
+++ b/www/app/spot/3dstructures-tab.html
@@ -22,12 +22,21 @@
     </button>
     <ion-list>
       <ion-item class='item-text-wrap item-button-right'
-                ng-repeat='_3dStructure in vm.spot.properties._3d_structures | orderBy: "label" track by _3dStructure.id'
-                ng-click='vmChild.edit3dStructure(_3dStructure)'>
-        {{ _3dStructure.label }}
-        <button class='button button-clear button-assertive' ng-click='vmChild.delete3dStructure(_3dStructure)'>
-          <i class='icon ion-minus-circled'></i>
-        </button>
+                ng-repeat='_3dStructure in vm.spot.properties._3d_structures | orderBy: "label" track by _3dStructure.id'>
+        <div ng-click='vmChild.edit3dStructure(_3dStructure)'>
+          <b>{{ _3dStructure.label }}</b>
+          <span ng-show='vm.getTagNames(_3dStructure)' class='list-sub'>
+            <br>Tags: {{ vm.getTagNames(_3dStructure) }}
+          </span>
+        </div>
+        <div class='buttons'>
+          <button class='button button-clear button-dark' ng-click='vm.addTag(_3dStructure)'>
+            <i class='icon ion-pricetag'></i>
+          </button>
+          <button class='button button-clear button-assertive' ng-click='vmChild.delete3dStructure(_3dStructure)'>
+            <i class='icon ion-minus-circled'></i>
+          </button>
+        </div>
       </ion-item>
     </ion-list>
   </ion-content>
