use back arrow to close modals in Spot tabs

--- a/www/app/spot/other-feature-modal.html
+++ b/www/app/spot/other-feature-modal.html
@@ -1,12 +1,9 @@
 <ion-modal-view>
   <ion-header-bar class='bar-dark nav-title-slide-ios7'>
-    <button class='button icon ion-checkmark-circled button-clear'
+    <button class='button icon ion-arrow-left-c button-clear'
             ng-click='vmChild.submitFeature()'>
     </button>
     <h1 class='title'>Other Feature</h1>
-    <button class='button icon ion-close-round button-clear'
-            ng-click='vmChild.closeModal("otherFeatureModal")'>
-    </button>
   </ion-header-bar>
   <ion-content class='has-header strabo-form'>
     <ion-input class='item item-input'>
