--- a/www/app/spot/inferences-relationship-modal.html
+++ b/www/app/spot/inferences-relationship-modal.html
@@ -1,11 +1,9 @@
 <ion-modal-view>
   <ion-header-bar class='bar-dark nav-title-slide-ios7'>
-    <button class='button icon ion-checkmark-circled button-clear'
+    <button class='button icon ion-arrow-left-c button-clear'
             ng-click='vmChild.submitRelationship()'>
     </button>
     <h1 class='title'>Relationship</h1>
-    <button class='button icon ion-close-round button-clear'
-            ng-click='vmChild.closeModal("relationshipModal")'></button>
   </ion-header-bar>
   <ion-content class='has-header'>
     <div class='relationship-select'>
