added relationship page

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -48,6 +48,9 @@
         <ion-item nav-clear menu-close href='#/app/tags'>
           Tags
         </ion-item>
+        <ion-item nav-clear menu-close href='#/app/relationships'>
+          Relationships
+        </ion-item>
         <div class='field-group item item-divider'>
           Maps
         </div>
