--- a/www/index.html
+++ b/www/index.html
@@ -70,6 +70,8 @@
     <script src="app/project/description.controller.js"></script>
     <script src="app/project/manage-project.controller.js"></script>
     <script src="app/project/preferences.controller.js"></script>
+    <script src="app/project/relationship.controller.js"></script>
+    <script src="app/project/relationships.controller.js"></script>
     <script src="app/project/rock-unit.controller.js"></script>
     <script src="app/project/tag.controller.js"></script>
     <script src="app/project/tags.controller.js"></script>
