--- a/www/index.html
+++ b/www/index.html
@@ -88,6 +88,7 @@
     <script src="app/spot/nest-tab.controller.js"></script>
     <script src="app/spot/orientation-data-tab.controller.js"></script>
     <script src="app/spot/other-features-tab.controller.js"></script>
+    <script src="app/spot/relationships-tab.controller.js"></script>
     <script src="app/spot/samples-tab.controller.js"></script>
     <script src="app/spot/spot-tab.controller.js"></script>
     <script src="app/spot/tags-tab.controller.js"></script>
