added relationships as a tag, removed relationship tab and menu item

--- a/www/index.html
+++ b/www/index.html
@@ -70,14 +70,12 @@
     <script src="app/project/description.controller.js"></script>
     <script src="app/project/manage-project.controller.js"></script>
     <script src="app/project/preferences.controller.js"></script>
-    <script src="app/project/relationship.controller.js"></script>
-    <script src="app/project/relationships.controller.js"></script>
     <script src="app/project/rock-unit.controller.js"></script>
-    <script src="app/project/tag.controller.js"></script>
-    <script src="app/project/tags.controller.js"></script>
     <script src="app/project/tools.controller.js"></script>
     <script src="app/spot/spot.controller.js"></script>
     <script src="app/spot/spots.controller.js"></script>
+    <script src="app/tag/tag.controller.js"></script>
+    <script src="app/tag/tags.controller.js"></script>
     <script src="app/user/login.controller.js"></script>
     <script src="app/user/user.controller.js"></script>
 
@@ -88,7 +86,6 @@
     <script src="app/spot/nest-tab.controller.js"></script>
     <script src="app/spot/orientation-data-tab.controller.js"></script>
     <script src="app/spot/other-features-tab.controller.js"></script>
-    <script src="app/spot/relationships-tab.controller.js"></script>
     <script src="app/spot/samples-tab.controller.js"></script>
     <script src="app/spot/spot-tab.controller.js"></script>
     <script src="app/spot/tags-tab.controller.js"></script>
@@ -113,6 +110,7 @@
     <script src="app/shared/localstorage.factory.js"></script>
     <script src="app/spot/spot.factory.js"></script>
     <script src="app/spot/spots.factory.js"></script>
+    <script src="app/tag/tag.factory.js"></script>
     <script src="app/user/user.factory.js"></script>
 
     <!-- ng filters -->
@@ -120,6 +118,12 @@
 
     <!-- ng directives -->
     <script src="app/form/auto-fields.directive.js"></script>
+    <script src="app/tag/concept.directive.js"></script>
+    <script src="app/tag/documentation.directive.js"></script>
+    <script src="app/tag/geologic-unit.directive.js"></script>
+    <script src="app/tag/list.directive.js"></script>
+    <script src="app/tag/other.directive.js"></script>
+    <script src="app/tag/relationship.directive.js"></script>
 
   </head>
   <body ng-app="app">
