--- a/www/index.html
+++ b/www/index.html
@@ -118,6 +118,7 @@
 
     <!-- ng directives -->
     <script src="app/form/auto-fields.directive.js"></script>
+    <script src="app/spot/tags-tab-list.directive.js"></script>
     <script src="app/tag/concept.directive.js"></script>
     <script src="app/tag/documentation.directive.js"></script>
     <script src="app/tag/geologic-unit.directive.js"></script>
