--- a/www/app/spot/tags-tab.html
+++ b/www/app/spot/tags-tab.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-content class='strabo-form'>
+  <ion-content>
     <div ng-show='vmChild.isTagging' class='padding-left padding-right active-tags'>
       {{ vmChild.getActiveTags() }}
     </div>
@@ -9,6 +9,21 @@
                 ng-click='vmChild.toggleTagging()'>
       <span class='toggle-left-label'>{{ vmChild.tagText }} </span>
     </ion-toggle>
+    <div ng-hide='vm.spotLevelTags.length === 0 && vm.featureLevelTags.length === 0'>
+      <label class="item item-input item-select">
+        <div class="input-label">
+          <i class='button-icon ion-funnel'></i>Filter by Type
+        </div>
+        <select ng-model='vm.selectedType' ng-change='vm.filterTagType()'>
+          <option value='all'>All</option>
+          <option value='geologic_unit'>Geologic Unit</option>
+          <option value='relationship'>Relationship</option>
+          <option value='concept'>Concept</option>
+          <option value='documentation'>Documentation</option>
+          <option value='other'>Other</option>
+        </select>
+      </label>
+    </div>
     <div class='item item-divider'>
       Spot Level Tags
     </div>
@@ -16,40 +31,34 @@
       <i class='icon ion-plus-circled'></i>
       <span class='button-text-big'>Add/Remove a Spot Level Tag</span>
     </button>
-    <div class='padding' ng-show='vm.spotLevelTags.length === 0'>
-      No Spot level tags added to this Spot yet.
+    <div class='padding' ng-show='vm.spotLevelTagsToDisplay.length === 0'>
+      <span ng-show='vm.selectedType === "all"'>No Spot level tags added to this Spot yet.</span>
+      <span ng-hide='vm.selectedType === "all"'>No Spot level tags with the type <b>{{ vmChild.getTagTypeLabel(vm.selectedType) }}</b> added to this Spot yet.</span>
     </div>
-    <ion-list>
-      <ion-item class='item-text-wrap item-button-right'
-                ng-repeat='tag in vm.spotLevelTags | orderBy:"name" track by tag.id'
-                ng-click='vmChild.goToTag(tag.id)'>
-        <b>{{ tag.name }}</b>
-        <strabo-tags-tab-list-directive></strabo-tags-tab-list-directive>
-        <button class='button button-clear button-assertive'
-                ng-click='vmChild.removeTag(tag)'>
-          <i class='icon ion-minus-circled'></i>
-        </button>
-      </ion-item>
-    </ion-list>
-
-    <div class='item item-divider'>
-      Feature Level Tags
+    <div class='strabo-form'>
+      <ion-list>
+        <ion-item class='item-text-wrap item-button-right'
+                  ng-repeat='tag in vm.spotLevelTagsToDisplay | orderBy:"name" track by tag.id'
+                  ng-click='vmChild.goToTag(tag.id)'>
+          <b>{{ tag.name }}</b>
+          <strabo-tags-tab-list-directive></strabo-tags-tab-list-directive>
+        </ion-item>
+      </ion-list>
+      <div class='item item-divider'>
+        Feature Level Tags
+      </div>
+      <div class='padding' ng-show='vm.featureLevelTagsToDisplay.length === 0'>
+        <span ng-show='vm.selectedType === "all"'>No feature level tags added to this Spot yet.</span>
+        <span ng-hide='vm.selectedType === "all"'>No feature level tags with the type <b>{{ vmChild.getTagTypeLabel(vm.selectedType) }}</b> added to this Spot yet.</span>
+      </div>
+      <ion-list>
+        <ion-item class='item-text-wrap item-button-right'
+                  ng-repeat='tag in vm.featureLevelTagsToDisplay | orderBy:"name" track by tag.id'
+                  ng-click='vmChild.goToTag(tag.id)'>
+          <b>{{ tag.name }}</b>
+          <strabo-tags-tab-list-directive></strabo-tags-tab-list-directive>
+        </ion-item>
+      </ion-list>
     </div>
-    <div class='padding' ng-show='vm.featureLevelTags.length === 0'>
-      No feature level tags added to this Spot yet.
-    </div>
-    <ion-list>
-      <ion-item class='item-text-wrap item-button-right'
-                ng-repeat='tag in vm.featureLevelTags | orderBy:"name" track by tag.id'
-                ng-click='vmChild.goToTag(tag.id)'>
-        <b>{{ tag.name }}</b>
-        <strabo-tags-tab-list-directive></strabo-tags-tab-list-directive>
-        <button class='button button-clear button-assertive'
-                ng-click='vmChild.removeTagFromFeatures(tag)'>
-          <i class='icon ion-minus-circled'></i>
-        </button>
-      </ion-item>
-    </ion-list>
-
   </ion-content>
 </ion-view>
