--- a/www/app/spot/add-tag-modal.html
+++ b/www/app/spot/add-tag-modal.html
@@ -9,23 +9,35 @@
     </button>
   </ion-header-bar>
   <ion-content class='has-header'>
+
+    <div ng-hide='vm.allTags.length === 0'>
+      <label class="item item-input item-select">
+        <div class="input-label">
+          <i class='button-icon ion-funnel'></i>Filter by Type
+        </div>
+        <select ng-model='vm.selectedType' ng-change='vm.filterAllTagsType()'>
+          <option value='all'>All</option>
+          <option value='geologic_unit'>Geologic Unit</option>
+          <option value='relationship'>Relationship</option>
+          <option value='concept'>Concept</option>
+          <option value='documentation'>Documentation</option>
+          <option value='other'>Other</option>
+        </select>
+      </label>
+    </div>
     <div class='padding' ng-show='vm.allTags.length === 0'>
       No Tags created yet. Create a new tag by using the '+' button in the top right.
     </div>
+    <div class='padding' ng-show='vm.allTags.length !== 0 && vm.allTagsToDisplay.length === 0'>
+      <span ng-show='vm.selectedType === "all"'>No Spot level tags added to this Spot yet.</span>
+      <span ng-hide='vm.selectedType === "all"'>No Spot level tags with the type <b>{{ vmChild.getTagTypeLabel(vm.selectedType) }}</b> added to this Spot yet.</span>
+    </div>
     <ion-checkbox class='item-text-wrap item-button-right'
-                  ng-repeat='tag in vm.allTags | orderBy:"name" track by tag.id'
+                  ng-repeat='tag in vm.allTagsToDisplay | orderBy:"name" track by tag.id'
                   ng-checked='vm.isTagChecked(tag)'
                   ng-click='vm.toggleTagChecked(tag)'>
       <b>{{ tag.name }}</b>
-      <span ng-if='tag.categorization'>{{ tag.categorization }}</span>
-      <small>
-        ({{ tag.spots.length || 0 }}
-        <span ng-if='tag.spots.length > 1 || !tag.spots.length'>Spots, </span>
-        <span ng-if='tag.spots.length === 1'>Spot, </span>
-        {{ vm.getNumTaggedFeatures(tag) }}
-        <span ng-if='vm.getNumTaggedFeatures(tag) === 0 || vm.getNumTaggedFeatures(tag) > 1'>Features)</span>
-        <span ng-if='vm.getNumTaggedFeatures(tag) === 1'>Feature)</span>
-      </small>
+      <strabo-tags-tab-list-directive></strabo-tags-tab-list-directive>
     </ion-checkbox>
   </ion-content>
 </ion-modal-view>
