added relationships back to own menu item and fixed relationships display in inferences tab

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -45,6 +45,9 @@
         <ion-item nav-clear menu-close href='#/app/spots'>
           Spots
         </ion-item>
+        <ion-item nav-clear menu-close href='#/app/relationships'>
+          Relationships
+        </ion-item>
         <ion-item nav-clear menu-close href='#/app/tags'>
           Tags
         </ion-item>
