--- a/www/app/spot/tags-tab.html
+++ b/www/app/spot/tags-tab.html
@@ -3,7 +3,7 @@
     <div ng-show='vmChild.isTagging' class='padding-left padding-right active-tags'>
       {{ vmChild.getActiveTags() }}
     </div>
-    <ion-toggle class='toggle-small'
+    <ion-toggle class='toggle-small strabo-form'
                 toggle-class='toggle-positive'
                 ng-model='vmChild.isTagging'
                 ng-click='vmChild.toggleTagging()'>
@@ -17,25 +17,24 @@
         <select ng-model='vm.selectedType' ng-change='vm.filterTagType()'>
           <option value='all'>All</option>
           <option value='geologic_unit'>Geologic Unit</option>
-          <option value='relationship'>Relationship</option>
           <option value='concept'>Concept</option>
           <option value='documentation'>Documentation</option>
           <option value='other'>Other</option>
         </select>
       </label>
     </div>
-    <div class='item item-divider'>
-      Spot Level Tags
-    </div>
-    <button ng-click='vm.addTag();' class='button button-clear button-positive'>
-      <i class='icon ion-plus-circled'></i>
-      <span class='button-text-big'>Add/Remove a Spot Level Tag</span>
-    </button>
-    <div class='padding' ng-show='vm.spotLevelTagsToDisplay.length === 0'>
-      <span ng-show='vm.selectedType === "all"'>No Spot level tags added to this Spot yet.</span>
-      <span ng-hide='vm.selectedType === "all"'>No Spot level tags with the type <b>{{ vmChild.getTagTypeLabel(vm.selectedType) }}</b> added to this Spot yet.</span>
-    </div>
     <div class='strabo-form'>
+      <div class='item item-divider' ng-show='vm.spotLevelTagsToDisplay.length > 0'>
+        Spot Level Tags
+      </div>
+      <button ng-click='vm.addTag();' class='button button-clear button-positive'>
+        <i class='icon ion-plus-circled'></i>
+        <span class='button-text-big'>Add/Remove a Spot Level Tag</span>
+      </button>
+      <div class='padding' ng-show='vm.spotLevelTagsToDisplay.length === 0 && vm.featureLevelTagsToDisplay.length === 0'>
+        <span ng-show='vm.selectedType === "all"'>No tags added to this Spot yet.</span>
+        <span ng-hide='vm.selectedType === "all"'>No tags with the type <b>{{ vmChild.getTagTypeLabel(vm.selectedType) }}</b> added to this Spot yet.</span>
+      </div>
       <ion-list>
         <ion-item class='item-text-wrap item-button-right'
                   ng-repeat='tag in vm.spotLevelTagsToDisplay | orderBy:"name" track by tag.id'
@@ -44,12 +43,8 @@
           <strabo-tags-tab-list-directive></strabo-tags-tab-list-directive>
         </ion-item>
       </ion-list>
-      <div class='item item-divider'>
+      <div class='item item-divider' ng-show='vm.featureLevelTagsToDisplay.length > 0'>
         Feature Level Tags
-      </div>
-      <div class='padding' ng-show='vm.featureLevelTagsToDisplay.length === 0'>
-        <span ng-show='vm.selectedType === "all"'>No feature level tags added to this Spot yet.</span>
-        <span ng-hide='vm.selectedType === "all"'>No feature level tags with the type <b>{{ vmChild.getTagTypeLabel(vm.selectedType) }}</b> added to this Spot yet.</span>
       </div>
       <ion-list>
         <ion-item class='item-text-wrap item-button-right'
