--- a/www/index.html
+++ b/www/index.html
@@ -73,8 +73,10 @@
     <script src="app/project/tools.controller.js"></script>
     <script src="app/spot/spot.controller.js"></script>
     <script src="app/spot/spots.controller.js"></script>
-    <script src="app/tag/tag.controller.js"></script>
-    <script src="app/tag/tags.controller.js"></script>
+    <script src="app/tag-relationship/relationship.controller.js"></script>
+    <script src="app/tag-relationship/relationships.controller.js"></script>
+    <script src="app/tag-relationship/tag.controller.js"></script>
+    <script src="app/tag-relationship/tags.controller.js"></script>
     <script src="app/user/login.controller.js"></script>
     <script src="app/user/user.controller.js"></script>
 
@@ -109,7 +111,7 @@
     <script src="app/shared/localstorage.factory.js"></script>
     <script src="app/spot/spot.factory.js"></script>
     <script src="app/spot/spots.factory.js"></script>
-    <script src="app/tag/tag.factory.js"></script>
+    <script src="app/tag-relationship/tag.factory.js"></script>
     <script src="app/user/user.factory.js"></script>
 
     <!-- ng filters -->
@@ -118,12 +120,11 @@
     <!-- ng directives -->
     <script src="app/form/auto-fields.directive.js"></script>
     <script src="app/spot/tags-tab-list.directive.js"></script>
-    <script src="app/tag/concept.directive.js"></script>
-    <script src="app/tag/documentation.directive.js"></script>
-    <script src="app/tag/geologic-unit.directive.js"></script>
-    <script src="app/tag/list.directive.js"></script>
-    <script src="app/tag/other.directive.js"></script>
-    <script src="app/tag/relationship.directive.js"></script>
+    <script src="app/tag-relationship/concept.directive.js"></script>
+    <script src="app/tag-relationship/documentation.directive.js"></script>
+    <script src="app/tag-relationship/geologic-unit.directive.js"></script>
+    <script src="app/tag-relationship/list.directive.js"></script>
+    <script src="app/tag-relationship/other.directive.js"></script>
 
   </head>
   <body ng-app="app">
