--- a/www/index.html
+++ b/www/index.html
@@ -119,12 +119,13 @@
 
     <!-- ng directives -->
     <script src="app/form/auto-fields.directive.js"></script>
-    <script src="app/spot/tags-tab-list.directive.js"></script>
     <script src="app/tag-relationship/concept.directive.js"></script>
     <script src="app/tag-relationship/documentation.directive.js"></script>
     <script src="app/tag-relationship/geologic-unit.directive.js"></script>
     <script src="app/tag-relationship/list.directive.js"></script>
     <script src="app/tag-relationship/other.directive.js"></script>
+    <script src="app/tag-relationship/tags-filter.directive.js"></script>
+    <script src="app/tag-relationship/tags-list-properties.directive.js"></script>
 
   </head>
   <body ng-app="app">
