--- a/www/app/tag-relationship/tags.html
+++ b/www/app/tag-relationship/tags.html
@@ -10,52 +10,22 @@
     <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
-    <div class='padding' ng-show='vm.tags.length === 0'>
-      No Tags added yet. Add a tag using the '+' button in the top right.
+    <div ng-show='vm.isTagging' class='padding-left padding-right active-tags'>
+      {{ vm.getActiveTags() }}
     </div>
-    <div ng-hide='vm.tags.length === 0'>
-      <label class="item item-input item-select">
-        <div class="input-label">
-          <i class='button-icon ion-funnel'></i>Filter by Type
-        </div>
-        <select ng-model='vm.selectedType' ng-change='vm.filterTagType()'>
-          <option value='all'>All</option>
-          <option value='geologic_unit'>Geologic Unit</option>
-          <option value='concept'>Concept</option>
-          <option value='documentation'>Documentation</option>
-          <option value='other'>Other</option>
-        </select>
-      </label>
-    </div>
+    <ion-toggle class='toggle-small strabo-form'
+                toggle-class='toggle-positive'
+                ng-model='vm.isTagging'
+                ng-click='vm.toggleTagging()'>
+      <span class='toggle-left-label'>{{ vm.tagText }} </span>
+    </ion-toggle>
+    <strabo-tags-filter-directive></strabo-tags-filter-directive>
     <ion-list>
       <ion-item class='item-text-wrap item-button-right'
-                ng-repeat='tag in vm.tagsToDisplay | orderBy:"name" track by tag.id'
+                ng-repeat='tag in vm.allTagsToDisplay | orderBy:"name" track by tag.id'
                 ng-click='vm.goToTag(tag.id)'>
         <b>{{tag.name}}</b>
-        <small>
-          <span ng-if='tag.type'>{{ vm.getTagTypeLabel(tag.type) }}<span ng-hide='tag.type === "relationship"'>:</span></span>
-          <span ng-show='tag.spots'>
-            {{ tag.spots.length || 0 }}
-            <span ng-if='tag.spots.length > 1 || !tag.spots.length'>Spots<span
-              ng-if='vm.getNumTaggedFeatures(tag) > 0 || tag.tags'>, </span></span>
-            <span ng-if='tag.spots.length === 1'>Spot<span
-              ng-if='vm.getNumTaggedFeatures(tag) > 0 || tag.tags'>, </span></span>
-          </span>
-          <span ng-show='vm.getNumTaggedFeatures(tag) > 0'>
-            {{ vm.getNumTaggedFeatures(tag) }}
-            <span ng-if='vm.getNumTaggedFeatures(tag) === 0 || vm.getNumTaggedFeatures(tag) > 1'>Features<span
-              ng-if='tag.tags'>, </span></span>
-            <span ng-if='vm.getNumTaggedFeatures(tag) === 1'>Feature<span ng-if='tag.tags'>, </span></span>
-          </span>
-          <span ng-show='tag.tags'>
-            {{ tag.tags.length || 0 }}
-            <span ng-if='tag.tags.length > 1 || !tag.tags.length'>Tags</span>
-            <span ng-if='tag.tags.length === 1'>Tag</span>
-          </span>
-          <span ng-show='tag.type !== "relationship" && !tag.spots && vm.getNumTaggedFeatures(tag) === 0 && !tag.tags'>
-            Empty
-          </span>
-        </small>
+        <strabo-tags-list-properties-directive></strabo-tags-list-properties-directive>
         <button class='button button-clear button-assertive'
                 ng-click='vm.deleteTag(tag)'>
           <i class='icon ion-minus-circled'></i>
