--- a/www/app/spot/basic-form-modal.html
+++ b/www/app/spot/basic-form-modal.html
@@ -5,7 +5,7 @@
     </button>
     <h1 class='title'>{{ vmChild.modalTitle }}</h1>
     <button class='button button-clear icon ion-compass'
-            ng-click='vmChild.getCompassInfo()'
+            ng-click='vmChild.openCompass()'
             ng-show='vm.stateName === "app.spotTab.orientation-data"'></button>
   </ion-header-bar>
   <ion-content class='has-header'>
