--- a/www/app/spot/compass-modal.html
+++ b/www/app/spot/compass-modal.html
@@ -6,10 +6,18 @@
     <h1 class='title'>Strabo Compass</h1>
   </ion-header-bar>
   <ion-content class='has-header'>
-    <div class='padding' ng-bind-html='vmChild.msgText'>
+    <div class='padding'>
+      <span ng-show='!vmChild.result.x && !vmChild.result.y && !vmChild.result.z && !vmChild.result.magneticHeading &&
+       !vmChild.error.both && !vmChild.error.compass && !vmChild.error.acceleration'>Working, please wait ...</span>
+      <span ng-show='vmChild.result.x'>X = {{ vmChild.result.x }}<br></span>
+      <span ng-show='vmChild.result.y'>Y = {{ vmChild.result.y }}<br></span>
+      <span ng-show='vmChild.result.z'>Z = {{ vmChild.result.z }}<br></span>
+      <span ng-show='vmChild.result.magneticHeading'>Magnetic Heading = {{ vmChild.result.magneticHeading }}<br></span>
+      <span ng-show='vmChild.error.both'>{{ vmChild.error.both }}<br></span>
+      <span ng-show='vmChild.error.compass'>Compass Error = {{ vmChild.error.compass }}<br></span>
+      <span ng-show='vmChild.error.acceleration'>Acceleration Error = {{ vmChild.error.acceleration }}<br></span>
     </div>
-    <br>
-    <div>
+    <div ng-show='!vmChild.error.both && !vmChild.error.compass && !vmChild.error.acceleration'>
       <div ng-hide='vm.data.type === "linear_orientation"'>
         <ion-input class='item item-input item-text-wrap'>
           <ion-label>Strike</ion-label>
