--- a/www/app/map/add-tag-modal.html
+++ b/www/app/map/add-tag-modal.html
@@ -14,7 +14,7 @@
     </div>
     <ion-checkbox class='item-text-wrap item-button-right'
                   ng-repeat='tag in vm.allTags | orderBy:"name" track by tag.id'
-                  ng-click='vm.toggleChecked(tag)'>
+                  ng-click='vm.toggleTagChecked(tag)'>
       <b>{{ tag.name }}</b>
       <span ng-if='tag.categorization'>{{ tag.categorization }}</span>
       <small>({{ tag.spots.length || 0 }}
