--- a/www/app/spot/spot.html
+++ b/www/app/spot/spot.html
@@ -18,7 +18,7 @@ navigation history that also transitions its views in and out.
   </ion-nav-buttons>
 </ion-nav-bar>
 
-<ion-header-bar class='bar-subheader'>
+<ion-header-bar class='bar-subheader bar-dark'>
   <ion-scroll direction='x' class='wide-as-needed'>
     <a class='button button-clear spot-tab-inactive'
        ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.spot"}'
