--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -54,7 +54,7 @@
         <div class='field-group item item-divider'>
           Maps
         </div>
-        <ion-item nav-clear menu-close href='#/app/map'>
+        <ion-item nav-clear menu-close href='#/app/map' ng-click='vm.showLoadingSpinner()'>
           Main Map
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/image-basemaps'>
