handle nesting when no geometry

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -16,7 +16,7 @@
                 <img src='img/ninja.png'>
               </div>
               <div ng-show='vm.userImage'>
-                <img class='profile-image' class='profile-image' ng-src='{{ vm.userImage }}'>
+                <img class='profile-image' ng-src='{{ vm.userImage }}'>
               </div>
               <span class='user-name'>{{ vm.userName }}</span>
             </div>
