moved images to own local db

--- a/www/index.html
+++ b/www/index.html
@@ -109,6 +109,7 @@
     <script src="app/remote-connection/remote-server.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
     <script src="app/shared/localstorage.factory.js"></script>
+    <script src="app/spot/image.factory.js"></script>
     <script src="app/spot/spot.factory.js"></script>
     <script src="app/spot/spots.factory.js"></script>
     <script src="app/tag-relationship/tag.factory.js"></script>
