--- a/www/app/spot/images-modal.html
+++ b/www/app/spot/images-modal.html
@@ -1,7 +1,7 @@
 <div class='modal image-modal'>
   <ion-slide-box on-slide-changed='slideChanged(index)' show-pager='true' active-slide='vmChild.activeSlide'>
     <ion-slide ng-repeat='image in vm.spot.properties.images'>
-      <img ng-src='{{image.src}}' class='fullscreen-image' ng-click='vmChild.closeImageModal()'/>
+      <img ng-src='{{ vmChild.getImageSrc(image.id) }}' class='fullscreen-image' ng-click='vmChild.closeModal("imageModal")'/>
       <textarea rows='3' class='image-modal-textarea' ng-model='image.caption'
                 placeholder='Image description ...'></textarea>
     </ion-slide>
