--- a/www/app/spot/images-tab.html
+++ b/www/app/spot/images-tab.html
@@ -8,7 +8,7 @@
     <input type='file' id='file' style='display: none;'/>
     <div class='row' ng-repeat='image in vm.spot.properties.images'>
       <div class='col image-col'>
-        <a><img ng-src='{{image.src}}' width='100' height='100' ng-click='vmChild.showImages($index)'/></a>
+        <a><img ng-src='{{ vmChild.getImageSrc(image.id) }}' width='100' height='100' ng-click='vmChild.showImages($index)'/></a>
       </div>
       <div class='col'>
         <ion-input class='item item-input'>
