fixed bug with login button not displaying in menu

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -22,7 +22,7 @@
             </div>
             <div ng-show='!vm.userName'>
               <br>
-              <button class='button button-small icon-left icon button-clear ion-log-in'>Login
+              <button class='button button-small icon-left icon button-clear button-light ion-log-in'>Login
               </button>
             </div>
           </td>
