--- a/www/app/map/map-popover.html
+++ b/www/app/map/map-popover.html
@@ -10,6 +10,12 @@
       <ion-item ng-click='vm.groupSpots()'>
         <i class="icon ion-pricetags"></i> Add Tag(s) to Spot(s)
       </ion-item>
+      <ion-item ng-show='vm.isNesting' ng-click='vm.toggleNesting()'>
+        <i class="icon ion-disc"></i> End Continous Nesting
+      </ion-item>
+      <ion-item ng-show='!vm.isNesting' ng-click='vm.toggleNesting()'>
+        <i class="icon ion-disc"></i> Begin Continuous Nesting
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-popover-view>
