added continuous nesting for image basemaps

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,9 @@
     <!-- turf -->
     <script src="lib/turf/turf.min.js"></script>
 
+    <!-- jsts -->
+    <script src="lib/jsts/jsts.min.js"></script>
+
     <!-- Base64 Encoding -->
     <script src="lib/base64.js"></script>
 
