added instructions for Nesting to nesting modal

--- a/www/app/shared/new-nest-modal.html
+++ b/www/app/shared/new-nest-modal.html
@@ -13,5 +13,13 @@
     <form name='straboForm' novalidate=''>
       <auto-fields/>
     </form>
+    <p class='padding'><small><b>About Nesting:</b> Nesting allows for the spatial grouping of Spots by creating a polygon Spot which contains all
+      new Spots created while Nesting is turned on. Nesting will also add an existing Spot to this Nest Spot if the page
+      for that Spot is accessed while Nesting is turned on. Alternatively, once Nesting is turned off Spots can be added
+      to (or removed from) a Nest Spot by editing the shape of the Nest Spot to include (or exclude) any other Spots.
+      <br><br>
+      <b>Tip:</b> The first Spot added to a new Nest Spot determines the map that will be applicable to the Nest Spot. That is
+      if Nesting begins on a particular image basemap, only Spots mapped on the exact same image basemap will be
+      considered as part of the Nest.</small></p>
   </ion-content>
 </ion-modal-view>
