--- a/www/app/spot/image-properties-modal.html
+++ b/www/app/spot/image-properties-modal.html
@@ -6,6 +6,8 @@
     </div>
     <h1 class='title'>Image Properties</h1>
     <div class="buttons">
+      <button ng-click='vmChild.exportImage();'
+              class='button button-icon icon ion-archive'></button>
       <button ng-click='vmChild.deleteImage();'
               class='button button-icon icon ion-trash-b'></button>
     </div>
